--- a/wp-next-stack/docker-compose.yml.j2
+++ b/wp-next-stack/docker-compose.yml.j2
@@ -30,6 +30,7 @@ services:
       - comandos-network
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=comandos-network"
       - "traefik.http.routers.comandos-wp.rule=Host(`{{WP_DOMAIN}}`)"
       - "traefik.http.routers.comandos-wp.entrypoints=websecure"
       - "traefik.http.routers.comandos-wp.tls=true"
@@ -43,6 +44,7 @@ services:
       - comandos-network
     labels:
       - "traefik.enable=true"
+      - "traefik.docker.network=comandos-network"
       - "traefik.http.routers.comandos-next.rule=Host(`{{FRONT_DOMAIN}}`)"
       - "traefik.http.routers.comandos-next.entrypoints=websecure"
       - "traefik.http.routers.comandos-next.tls=true"
