--- a/wp-next-stack/docker-compose.yml.j2
+++ b/wp-next-stack/docker-compose.yml.j2
@@ -42,6 +42,8 @@ services:
     restart: unless-stopped
     networks:
       - comandos-network
+    environment:
+      WP_API_BASE: "https://{{WP_DOMAIN}}/wp-json/wp/v2"
     labels:
       - "traefik.enable=true"
       - "traefik.docker.network=comandos-network"
