Убрать плагины и фикс certResolver

--- a/wp-next-stack/docker-compose.yml.j2
+++ b/wp-next-stack/docker-compose.yml.j2
@@ -43,6 +43,7 @@ services:
     networks:
       - comandos-network
     environment:
+      NEXT_PUBLIC_WP_URL: "https://{{WP_DOMAIN}}"
       WP_API_BASE: "https://{{WP_DOMAIN}}/wp-json/wp/v2"
     labels:
       - "traefik.enable=true"
