--- a/wp-next-stack/docker-compose.yml.j2
+++ b/wp-next-stack/docker-compose.yml.j2
@@ -37,7 +37,15 @@ services:
       - "traefik.http.services.comandos-wp.loadbalancer.server.port=80"
 
   comandos-next:
-    image: gansa1os/comandos-frontend:latest
+    image: comandos-frontend:local
+    build:
+      context: .
+      dockerfile: frontend.Dockerfile
+      args:
+        FRONTEND_REPO_URL: "{{FRONTEND_REPO_URL}}"
+        FRONTEND_REPO_REF: "{{FRONTEND_REPO_REF}}"
+        NEXT_PUBLIC_WP_URL: "https://{{WP_DOMAIN}}"
+        WP_API_BASE: "https://{{WP_DOMAIN}}/wp-json/wp/v2"
     container_name: comandos-next
     restart: unless-stopped
     networks:
